# mlflare

./: .gitignore  .goreleaser.yml  LICENSE  MLFLARE-SPEC.md  README.md  go.mod  go.sum  install.sh  mlflare-architecture.html  package.json  pnpm-lock.yaml
.github/workflows/: publish-sdk.yml  release.yml
backend/: package.json  wrangler.jsonc
backend/migrations/: 0001_initial.sql
backend/src/: index.ts  types.ts
backend/src/do/: experiment-run.ts  instance-orchestrator.ts
backend/src/lib/: hyperstack.ts  jwt.ts  totp.ts  ulid.ts
backend/src/middleware/: auth.ts
backend/src/routes/: agent.ts  api.ts  auth.ts  sdk.ts
cmd/agent/: main.go
cmd/cli/: main.go
configs/: mlflare-agent.service
embedded/: embed.go
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: useRunStream.ts  useStatus.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  RunDetail.tsx
internal/agent/: agent.go  batcher.go  bundle.go  heartbeat.go  subprocess.go
internal/api/: client.go
internal/auth/: auth.go
internal/cli/: init.go  logs.go  root.go  run.go  status.go
internal/cloudflare/: cloudflare.go
internal/config/: agent.go
internal/hyperstack/: hyperstack.go
internal/provision/: provision.go
internal/r2/: r2.go
internal/version/: version.go
sdk/: pyproject.toml
sdk/mlflare/: __init__.py  _client.py  _run.py  stdout.py
sdk/tests/: test_run.py  test_stdout.py
