[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlflare"
version = "0.1.0"
description = "MLflare Python SDK — zero-dependency ML experiment tracking"
requires-python = ">= 3.9"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["mlflare"]
