[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mlflare"
dynamic = ["version"]
description = "MLflare Python SDK — zero-dependency ML experiment tracking"
requires-python = ">= 3.9"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", tag_regex = "^sdk-v(?P<version>.*)$" }

[tool.hatch.build.hooks.vcs]
version-file = "mlflare/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["mlflare"]
